--- a/content/static/css/bargraph.css
+++ b/content/static/css/bargraph.css
@@ -6,12 +6,29 @@
 
 
 .bargraph-detail {
+  display: inline-block;
+}
+
+.bargraph-detail-date{
+  border: none;
+  background-color: #2884B0;
+  float: left;
+  padding-left: 40px;
+  text-transform: uppercase;
   color: #fff;
   font-size: 18px;
-  float: left;
-  padding: 0 40px;
-  text-transform: uppercase;
 }
+
+input[type="month"]::-webkit-calendar-picker-indicator {
+  filter:  invert(1);
+}
+
+.bargraph-date-submit{
+  border: none;
+  background-color:rgba(0, 0, 0, 0);
+  padding-top: 5px;
+}
+
 
 .main-wrapper {
   align-items: center;
