--- a/content/templates/content/AddStudyLog.html
+++ b/content/templates/content/AddStudyLog.html
@@ -20,6 +20,7 @@
       </div>
       <div class="btn-area">
         <input type="submit" value="送信">
+        <input type="submit" value="戻る">
       </div>
     </form>
   </div>
