--- a/content/templates/content/RegistSite.html
+++ b/content/templates/content/RegistSite.html
@@ -78,8 +78,8 @@
   </div>
   <!--学習ログタイトル，ボタン　おわり-->
   <!--検索欄-->
-  <form method="GET" class="search_container"><!--action="{% url 'studyapp:registsite' query %}"-->
-    <input type="text" size="25" name="search" placeholder="検索" ><!--value="{{request.GET.search}}"-->
+  <form method="GET" action="{% url 'studyapp:registsite_search' %}" class="search_container">
+    <input type="text" size="25" name="search" value="{{request.GET.search}}" placeholder="検索" >
     <input type="submit" value="&#xf002">
   </form>
   <!--検索欄終わり-->
@@ -88,22 +88,28 @@
     <div class="registe-site-style">
       <table id="registe-site-table">
         <tr>
-          <th>サイト名/url</th>
+          <th>サイト名&url</th>
           <th>ジャンル</th>
-          <th>削除</th>
+          <th>削除/編集</th>
         </tr>
         {% for content in contents %}
         <tr>
-          <form action="{% url 'studyapp:delete_site' registsite.pk %}" method="POST">
-          {% csrf_token %}
-            <td><a href="{{content.url}}">{{content.title}}</a></td>
-            <td>{{content.category}}</td>
-            <td>
-              <button type="submit" onclick="return confirm('本当に削除しますか？');">
-                <i class="fa fa-trash-o"></i>
+          <td><a href="{{content.url}}">{{content.title}}</a></td>
+          <td>{{content.category}}</td>
+          <td>
+            <form action="{% url 'studyapp:delete_site' content.id %}" method="POST">
+              {% csrf_token %}
+              <button  class="delete_site_button" type="submit" onclick="return confirm('本当に削除しますか？');">
+                <i class="fa fa-trash-o" style="color:red;"></i>
               </button>
-            </td>
-          </form>
+            </form>
+            /
+            <form action="{% url 'studyapp:edit_site'%}" method="POST">
+              <button class="edit_site_button" type="submit">
+                <i class="fa fa-edit"></i>
+              </button>
+            </form>
+          </td>
         </tr>
         {% endfor %}
       </table>
