--- a/content/templates/content/home-after-login.html
+++ b/content/templates/content/home-after-login.html
@@ -123,7 +123,7 @@
     var today = new Date();
     var yyyy = today.getFullYear();
     var mm = ("0"+(today.getMonth()+1)).slice(-2);
-    document.getElementById("bargraph-detail-date").value = yyyy + '年' + mm　+ '月'
+    document.getElementById("bargraph-detail-date").value = yyyy + '-' + mm
     $(".wrapper").delay(500).fadeIn(450);
       var barDataset = [
         {
