add views for studytime graph

--- a/content/templates/content/RegistSite.html
+++ b/content/templates/content/RegistSite.html
@@ -104,7 +104,7 @@
               </button>
             </form>/
             <button class="edit_site_button" type="submit" >
-              <a href="{% url 'studyapp:edit_site' content.pk %}" style="color: black;">
+              <a href="{% url 'studyapp:edit_site' content.id %}" style="color: black;">
                 <i class="fa fa-edit"></i>
               </a>
             </button>
