--- a/content/templates/content/regist_site_edit.html
+++ b/content/templates/content/regist_site_edit.html
@@ -8,7 +8,7 @@
       {% csrf_token %}
       <div class="inputs">
         <label class="label">url</label>
-        <input class="input_form" type="url" name="url" value="{{ reistsite.url }}">
+        <input class="input_form" type="url" name="url" value="{{ registsite.url }}">
       </div>
       <div class="inputs">
         <label class="label">サイト名</label>
