--- a/content/templates/content/timer.html
+++ b/content/templates/content/timer.html
@@ -104,7 +104,7 @@
       } else {
         sec = parseInt(cookie_sec)
       }
-      $('stopwatch').text = hr + ':' + min + ':' + sec
+      timer.innerHTML= hr + ':' + min + ':' + sec
 
 
       function timerCycle() {
