--- a/content/templates/content/RegistSite.html
+++ b/content/templates/content/RegistSite.html
@@ -114,5 +114,38 @@
       </table>
     </div>
   </div>
+  {% if pages.has_other_pages %}
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      ｛% if pages.has_previous %｝
+      <li><a class="page-link text-primary d-inline-block" href="?page=｛｛ pages.previous_page_number ｝｝"></a></li>
+      ｛% else %｝
+      <li class="disabled">
+        <div class="page-link text-secondary d-inline-block disabled" href="#"></div></div>
+      </li>
+      {% endif %}
+
+      {% for page_num in page.paginator.page_range %}
+        {% if page_num %}
+          {% if page_num == page.number %}
+          <li class="disabled">
+            <div class="page-link text-secondary d-inline-block disabled" href="#"></div>
+          </li>
+          {% else %}
+          <li class="disabled">
+            <div class="page-link text-secondary d-inline-block disabled" href="?page={{ pages.page_num }}"></div>
+          </li>
+          {% endif %}
+        {% else %}
+          <li class="disabled"><a class="page-link text-secondary d-inline-block text-muted" href="#">・・・</a></li>
+        {% endif %｝
+      {% endfor %｝
+
+      {% if page.has_next %}
+        <li><div class="page-link text-secondary d-inline-block disabled" href="?page={{ pages.next_page_number }}"></div></li>
+      {% else %}
+        <li class="disabled"><a class="page-link text-secondary d-inline-block text-muted" href="#"></a></li>
+      {% endif %}
+    </ul>
   {% endblock %}
 </body>
