--- a/content/templates/content/regist-site-form.html
+++ b/content/templates/content/regist-site-form.html
@@ -20,7 +20,10 @@
       </div>
       <div class="btn-area">
         <input type="submit" value="送信">
-        <input type="submit" value="戻る">
+        <button style="background-color: rgba(0,0,0,0); border: none;">
+          <a href="{% url 'studyapp:registsite %}"></a>
+          <input style="background-color: #cbcccb;" type="submit" value="戻る">
+        </button>
       </div>
     </form>
   </div>
