--- a/content/static/css/regist-site-form.css
+++ b/content/static/css/regist-site-form.css
@@ -7,6 +7,29 @@
     -ms-transform: translate(-50%, -50%);
 }
 
+#nav {
+  list-style: none;
+  overflow: hidden;
+	padding-left: 0px ;
+}
+
+#nav li {
+  text-align: center;
+  background-color: #ff96a3;
+	border-color:#ff96a3 ;
+  float: left;
+	margin-left:0.1rem ;
+	padding: 0.5rem 1rem;
+	border-left:#fff ;
+}
+
+#nav li a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+
 form{
 	width:600px;
 	margin:0 auto;
