--- a/content/static/css/edit_studylog.css
+++ b/content/static/css/edit_studylog.css
@@ -1,11 +1,22 @@
 .location {
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-    }
+  position: absolute;
+  top: 40%;
+  left: 55%;
+  transform: translate(-50%, -50%);
+}
+
+.search_regist_date{
+  display: inline-block;
+  margin: 0px;
+}
+
+.select_date{
+  background-color: rgba(0,0,0,0);
+	border: solid 1px black;
+	font-size: 15px;
+  color: black;
+	border-radius: 5px;
+}
 
 #nav {
   list-style: none;
@@ -29,11 +40,6 @@
   font-weight: bold;
 }
 
-.change_edit_studylog_date{
-  background-color: rgba(0,0,0,0);
-  border: none;
-  margin-left: 100%;
-}
 
 .registe-site-style {
   width: 80%;
@@ -96,7 +102,8 @@ a{
 }
 
 .btn-area{
-	text-align: center;
+  position: absolute;
+  left: 35%;
 }
 
 input[type="submit"]{
