--- a/content/templates/content/EditStudylog.html
+++ b/content/templates/content/EditStudylog.html
@@ -1,6 +1,8 @@
 <head>
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="./../../static/css/edit_studylog.css">
+  <script src="https://kit.fontawesome.com/330fa5bd85.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -10,23 +12,26 @@
   <div class="location">
     <ul id="nav">
       <li style="border-radius: 10px 0px 0px 10px;"><a href="{% url 'studyapp:studylog' %}">追加</a></li>
-      <li style="border-radius: 0px 10px 10px 0px;"><a href="#">編集</a></li>
-      <li>
-        <button class="change_edit_studylog_date">
-          <input type="date">
-        </button>
+      <li style="border-radius: 0px 10px 10px 0px;"><a href="{% url %}">編集</a></li>
+      <li style="background-color:#fff; padding-left: 30%;">
+        <form class="search_regist_date" action="" method="GET">
+          <input class="select_date" type="date">
+          <button class="bargraph-date-submit" type="submit" style="background-color: rgba(0,0,0,0); border: none;">
+            <i class="fas fa-sync" style="color:#000;"></i>
+          </button>
+        </form>
       </li>
     </ul>
     <div class="registe-site-style">
       <table id="registe-site-table">
         <tr>
-          <th>サイト名&url</th>
-          <th>ジャンル</th>
+          <th>分類</th>
+          <th>勉強時間</th>
           <th>削除/編集</th>
         </tr>
         {% for content in contents %}
         <tr>
-          <td><a href="{{content.url}}" class="post_usersite_title">{{content.title}}</a></td>
+          <td>{{content.title}}</td>
           <td>{{content.category}}</td>
           <td>
             <form action="{% url 'studyapp:delete_site' content.id %}" method="POST" class="delete_usrsite_form">
