--- a/content/templates/content/AddStudyLog.html
+++ b/content/templates/content/AddStudyLog.html
@@ -23,7 +23,7 @@
         <input class="input_form"  type="number" name="time">
       </div>
       <div class="btn-area">
-        <input type="submit" value="送信">
+        <input type="submit" value="追加">
         <button class="return_home">
           <a href="{% url 'studyapp:home' %}"></a>
           <input style="background-color: #cbcccb;" type="submit" value="戻る">
