--- a/content/templates/content/regist_site_edit.html
+++ b/content/templates/content/regist_site_edit.html
@@ -20,7 +20,9 @@
       </div>
       <div class="btn-area">
         <input type="submit" value="送信">
-        <input type="submit" value="戻る">
+        <div class="return">
+          <a class="return_link" href="{% url 'studyapp:registsite' %}">戻る</a>
+        </div>
       </div>
     </form>
   </div>
