--- a/content/templates/content/home-after-login.html
+++ b/content/templates/content/home-after-login.html
@@ -5,29 +5,31 @@
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="./../../static/css/base.css">
   <link rel="stylesheet" href="./../../static/css/bargraph.css">
+  <link rel="stylesheet" href="./../../static/css/tab_for_home.css">
   <style>
-    .studylog-name{
-      position:absolute;
+    .studylog-name {
+      position: absolute;
       left: 284px;
     }
 
-    .button-addstudylog-location{
+    .button-addstudylog-location {
       position: absolute;
       right: 16px;
       width: 100vw;
     }
 
-    .bargraph-one-location{
+    .bargraph-one-location {
       position: absolute;
-      top: 113px;
+      top: 93px;
       left: 284px;
       width: calc(100% - 284px);
+      display:block;
     }
 
 
-  /*配置終わり*/
+    /*配置終わり*/
 
-  /*学習ログデザイン　初め*/
+    /*学習ログデザイン　初め*/
 
     .button-addstudylog {
       position: absolute;
@@ -55,9 +57,14 @@
       opacity: 1;
     }
 
-    .studylog-name span{
+    .studylog-name span {
       font-size: 28px;
       font-weight: 600;
+    }
+
+    .bargraph-one-style{
+      border: #FFF;
+      margin: auto;
     }
   </style>
 </head>
@@ -72,15 +79,15 @@
   </div>
 </div>
 <!--学習ログタイトル，ボタン　おわり-->
-<!--切り替えボタン-->
-<ul id="nav">
-  <li><a href="#">全体</a></li>
-  <li><a href="#">詳細</a></li>
-</ul>
-<!--切り替えボタン終了-->
 <!--棒グラフ1-->
 <div class="bargraph-one-location">
   <div class="bargraph-one-style">
+    <!--切り替えボタン-->
+    <ul id="nav">
+      <li style="border-radius:10px 0px 0px 10px ;"><a href="{% url 'studyapp:home' %}">全体</a></li>
+      <li style="border-radius:0px 10px 10px 0px ;"><a href="{% url 'studyapp:detail_total'%}">詳細</a></li>
+    </ul>
+    <!--切り替えボタン終了-->
     <div class="main-wrapper">
       <div class="wrapper">
         <div class="cards">
@@ -103,9 +110,10 @@
         </div>
         <div class="chart-wrapper" id="chart-bar">
           <h1 class="bargraph-detail">
-            <form action="" method="GET">
-            {% csrf_token %}
-              <input id="bargraph-detail-date" class="bargraph-detail-date" required="required" type="month" name="each_month_studylog" value="{{ request.GET.each_month_studylog }}">
+            <form action="{% url 'studyapp:home_search' %}" method="GET">
+              {% csrf_token %}
+              <input id="bargraph-detail-date" class="bargraph-detail-date" required="required" type="month"
+                name="each_month_studylog" value="{{ date }}">
               <button class="bargraph-date-submit" type="submit">
                 <i class="fas fa-sync" style="color: #FFF;"></i>
               </button>
@@ -124,305 +132,178 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script>
-  var today = new Date();
-  var yyyy = today.getFullYear();
-  var mm = ("0"+(today.getMonth()+1)).slice(-2);
-  document.getElementById("bargraph-detail-date").value = yyyy + '-' + mm
-
+  var dayset = JSON.parse('{{ querysets|safe }}')
   $(".wrapper").delay(500).fadeIn(450);
-    var barDataset = [
-      {
-        "date":1,
-        "total":1,
-      },
-      {
-        "date": 1,
-        "total": 1,
-      },
-      {
-        "date": 2,
-        "total": 41,
-      },
-      {
-        "date": 3,
-        "total": 21,
-      },
-      {
-        "date": 4,
-        "total": 41,
-      },
-      {
-        "date": 5,
-        "total": 31,
-      },
-      {
-        "date": 6,
-        "total": 41,
-      },
-      {
-        "date": 7,
-        "total": 41,
-      },
-      {
-        "date": 8,
-        "total": 41,
-      },
-      {
-        "date": 9,
-        "total": 41,
-      },
-      {
-        "date": 10,
-        "total": 81,
-      },
-      {
-        "date": 11,
-        "total": 41,
-      },
-      {
-        "date": 12,
-        "total": 41,
-      },
-      {
-        "date": 13,
-        "total": 41,
-      },
-      {
-        "date": 14,
-        "total": 41,
-      },
-      {
-        "date": 15,
-        "total": 41,
-      },
-      {
-        "date": 16,
-        "total": 41,
-      },
-      {
-        "date": 17,
-        "total": 41,
-      },
-      {
-        "date": 18,
-        "total": 41,
-      },
-      {
-        "date": 19,
-        "total": 41,
-      },
-      {
-        "date": 20,
-        "total": 41,
-      },
-      {
-        "date": 21,
-        "total": 41,
-      },
-      {
-        "date": 22,
-        "total": 41,
-      },
-      {
-        "date": 23,
-        "total": 41,
-      },
-      {
-        "date": 24,
-        "total": 41,
-      },
-      {
-        "date": 25,
-        "total": 41,
-      },
-      {
-        "date": 26,
-        "total": 41,
-      },
-      {
-        "date": 27,
-        "total": 41,
-      },
-      {
-        "date": 28,
-        "total": 41,
-      },
-      {
-        "date": 29,
-        "total": 41,
-      },
-      {
-        "date": 30,
-        "total": 41,
-      },
-      {
-        "date": 31,
-        "total": 41,
-      }
-    ]
-
-    function drawBarGraph(data) {
-
-      var status = ["total"];
-
-      var colors = ["total", "#50E3C2"];
-
-      var margin = { top: 30, right: 30, bottom: 40, left: 60 },
-        width = 860 - margin.left - margin.right,
-        height = 290 - margin.top - margin.bottom;
-
-      var z = d3.scale.ordinal()
-        .range(["#50E3C2", "#EF5C6E"]);
-
-      var n = 32;
-
-      var x = d3.scale.linear()
-        .domain([1, n - 1])
-        .rangeRound([0, width], .1);
-
-      var y = d3.scale.linear()
-        .rangeRound([height, 0]);
-
-      var xAxis = d3.svg.axis()
-        .scale(x)
-        .orient("bottom")
-        .tickFormat(d3.format("d"))
-        .ticks(30);
-
-      var yAxis = d3.svg.axis()
-        .scale(y)
-        .orient("left")
-        .ticks(5)
-        .tickFormat(d3.format("d"));
-
-      var svg = d3.select("#chart-bar")
-        .append("svg")
-        .attr("width", width + margin.left + margin.right)
-        .attr("height", height + margin.top + margin.bottom)
-        .append("g")
-        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-      var layers = d3.layout.stack()
-        (status.map(function (c) {
-          return data.map(function (d) {
-            return { x: d.date, y: d[c] };
-          });
-        }));
+  var barDataset = []
+  i = 1
+  for (var item in dayset) {
+    i += 1
+    barDataset.push(dayset[item])
+  }
 
 
-      y.domain([
-        0, d3.max(layers[layers.length - 1], function (d) {
-          return d.y0 + d.y;
-        })
-      ]);
+  function drawBarGraph(data) {
 
+    var status = ["total"];
 
-      // gridlines in y axis function
-      function make_y_gridlines() {
-        return d3.svg.axis().scale(y)
-          .orient("left").ticks(5);
-      }
+    var colors = ["total", "#50E3C2"];
 
-      // add the Y gridlines
-      svg.append("g")
-        .attr("class", "gridline")
-        .call(make_y_gridlines()
-          .tickSize(-width)
-          .tickFormat("")
-        );
+    var margin = { top: 30, right: 30, bottom: 40, left: 60 },
+      width = 860 - margin.left - margin.right,
+      height = 290 - margin.top - margin.bottom;
 
-      svg.append("g")
-        .attr("class", "axis axis--x")
-        .attr("transform", "translate(6," + height + ")")
-        .call(xAxis)
-        .append("text")
-        .attr("transform", "translate(364,0)")
-        .attr("y", "3em")
-        .style("text-anchor", "middle")
-        .text("Days");
+    var z = d3.scale.ordinal()
+      .range(["#50E3C2", "#EF5C6E"]);
 
-      svg.append("g")
-        .attr("class", "axis axis--y")
-        .call(yAxis)
-        .append("text")
-        .attr("transform", "rotate(-90)")
-        .attr("x", "-5em")
-        .attr("y", "-2.5em")
-        .style("text-anchor", "end")
-        .text("総学習時間");
+    var n = 32;
 
+    var x = d3.scale.linear()
+      .domain([1, n - 1])
+      .rangeRound([0, width], .1);
 
-      function type(d) {
-        // d.date = parseDate(d.date);
-        d.date;
-        status.forEach(function (c) {
-          d[c] = +d[c];
+    var y = d3.scale.linear()
+      .rangeRound([height, 0]);
+
+    var xAxis = d3.svg.axis()
+      .scale(x)
+      .orient("bottom")
+      .tickFormat(d3.format("d"))
+      .ticks(30);
+
+    var yAxis = d3.svg.axis()
+      .scale(y)
+      .orient("left")
+      .ticks(5)
+      .tickFormat(d3.format("d"));
+
+    var svg = d3.select("#chart-bar")
+      .append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+      .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    var layers = d3.layout.stack()
+      (status.map(function (c) {
+        return data.map(function (d) {
+          return { x: d.date, y: d[c] };
         });
-        return d;
-      }
+      }));
 
-      var tooltip = d3.select("#chart-bar").append("div")
-        .attr("class", "tooltip")
-        .style("opacity", 0);
 
-      var layer = svg.selectAll(".layer")
-        .data(layers)
-        .enter().append("g")
-        .attr("class", "layer")
-        .style("fill", function (d, i) {
-          return z(i);
-        });
+    y.domain([
+      0, d3.max(layers[layers.length - 1], function (d) {
+        return d.y0 + d.y;
+      })
+    ]);
 
-      layer.selectAll("rect")
-        .data(function (d) {
-          return d;
-        })
-        .enter().append("rect")
-        .on("mouseover", function (d) {
-          tooltip.transition()
-            .duration(200)
-            .style("opacity", 1);
-          tooltip.html("<span>" + d.y + " calls" + "</span>")
-            .style("left", (d3.event.pageX - 25) + "px")
-            .style("top", (d3.event.pageY - 28) + "px");
-        })
-        .on("mouseout", function (d) {
-          tooltip.transition()
-            .duration(500)
-            .style("opacity", 0);
-        })
-        .attr("x", function (d) {
-          return x(d.x);
-        })
-        .attr("y", function (d) {
-          return height;
-        })
-        .attr("width", 12)
-        .attr("height", 0)
-        .transition().duration(1500)
-        .attr("y", function (d) {
-          return y(d.y + d.y0);
-        })
-        .attr("height", function (d) {
-          return y(d.y0) - y(d.y + d.y0);
-        });
 
+    // gridlines in y axis function
+    function make_y_gridlines() {
+      return d3.svg.axis().scale(y)
+        .orient("left").ticks(5);
     }
 
-    drawBarGraph(barDataset);
+    // add the Y gridlines
+    svg.append("g")
+      .attr("class", "gridline")
+      .call(make_y_gridlines()
+        .tickSize(-width)
+        .tickFormat("")
+      );
+
+    svg.append("g")
+      .attr("class", "axis axis--x")
+      .attr("transform", "translate(6," + height + ")")
+      .call(xAxis)
+      .append("text")
+      .attr("transform", "translate(364,0)")
+      .attr("y", "3em")
+      .style("text-anchor", "middle")
+      .text("日");
+
+    svg.append("g")
+      .attr("class", "axis axis--y")
+      .call(yAxis)
+      .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("x", "-5em")
+      .attr("y", "-2.5em")
+      .style("text-anchor", "end")
+      .text("総学習時間");
 
 
-    $('.count').each(function () {
-      $(this).prop('Counter', 0).animate({
-        Counter: $(this).text()
-      }, {
-        duration: 1500,
-        easing: 'swing',
-        step: function (now) {
-          $(this).text(Math.ceil(now));
-        }
+    function type(d) {
+      // d.date = parseDate(d.date);
+      d.date;
+      status.forEach(function (c) {
+        d[c] = +d[c];
       });
+      return d;
+    }
+
+    var tooltip = d3.select("#chart-bar").append("div")
+      .attr("class", "tooltip")
+      .style("opacity", 0);
+
+    var layer = svg.selectAll(".layer")
+      .data(layers)
+      .enter().append("g")
+      .attr("class", "layer")
+      .style("fill", function (d, i) {
+        return z(i);
+      });
+
+    layer.selectAll("rect")
+      .data(function (d) {
+        return d;
+      })
+      .enter().append("rect")
+      .on("mouseover", function (d) {
+        tooltip.transition()
+          .duration(200)
+          .style("opacity", 1);
+        tooltip.html("<span>" + d.y + " calls" + "</span>")
+          .style("left", (d3.event.pageX - 25) + "px")
+          .style("top", (d3.event.pageY - 28) + "px");
+      })
+      .on("mouseout", function (d) {
+        tooltip.transition()
+          .duration(500)
+          .style("opacity", 0);
+      })
+      .attr("x", function (d) {
+        return x(d.x);
+      })
+      .attr("y", function (d) {
+        return height;
+      })
+      .attr("width", 12)
+      .attr("height", 0)
+      .transition().duration(1500)
+      .attr("y", function (d) {
+        return y(d.y + d.y0);
+      })
+      .attr("height", function (d) {
+        return y(d.y0) - y(d.y + d.y0);
+      });
+
+  }
+
+  drawBarGraph(barDataset);
+
+
+  $('.count').each(function () {
+    $(this).prop('Counter', 0).animate({
+      Counter: $(this).text()
+    }, {
+      duration: 1500,
+      easing: 'swing',
+      step: function (now) {
+        $(this).text(Math.ceil(now));
+      }
     });
+  });
 </script>
 
 {% endblock %}
